# splink_udfs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  extension_config.cmake  step_by_step.md  try_basic.py  try_macro.py  try_speed_lev.py  try_speed_udf.py  try_trie_real_data.py  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
context/: code_formatting.md
context/summaries/: cpp_code_style.md  dependencies.md
scripts/java_dmeta/: DoubleMetaphoneExample.java  wikidata_names.csv
src/: splink_udfs_extension.cpp
src/common/trie/: address_lookup.cpp  peel_utils.cpp  suffix_trie.cpp  trie_cache_utils.cpp  trie_nav.cpp
src/functions/address/: build_cleaned_address.cpp  find_address_from_trie.cpp  find_address_from_trie_classify.cpp  find_address_from_trie_dbg.cpp  format_address_with_counts.cpp  format_address_with_term.cpp
src/functions/trie/: build_suffix_trie.cpp  find_address.cpp  find_candidates.cpp  peel_end_tokens.cpp
src/include/: splink_udfs_extension.hpp  string_comparison.hpp  utf8proc_compat.hpp
src/include/arrays/: ngrams.hpp
src/include/phonetic/: double_metaphone.hpp  soundex.hpp  strip_diacritics.hpp
src/include/rapidfuzz/: string_comparison.hpp
src/include/trie/: address_lookup.hpp  address_match_params.hpp  address_trie_functions.hpp  peel_utils.hpp  suffix_trie.hpp  suffix_trie_cache.hpp  trie_cache_utils.hpp  trie_nav.hpp
test/data/: wikidata_names.csv
test/sql/: diacritics.test  dlev.test  dmetaphone.test  find_address.test  find_address_from_trie.test  find_address_params.test  find_address_regression.test  lev.test  ngrams.test  rapidfuzz.test  soundex.test  splink_udfs.test  trie_basic.test  trie_skips.test  unaccent.test
